# deferred

./: .env.example  .gitignore  DEMO.md  Dockerfile  HACKATHON_PITCH.md  README.md  alembic.ini  bob_scan_qr.py  demo_emergency.ps1  demo_emergency.sh  demo_emergency_auto.ps1  docker-compose.yml  generate_alice_qr.py  locustfile.py  main.py  merchant_pos.html  presentation_guide.html  pyproject.toml  setup_creds.py  usage.md
app/: __init__.py  auth.py  config.py  db.py  main.py  middleware.py  models.py  observability.py  schemas.py
app/crypto/: __init__.py  keys.py  secure_element.py  shamir.py  tokens.py
app/routers/: __init__.py  auth_routes.py  payments.py  settlements.py  sync.py  topups.py  wallets.py
app/services/: __init__.py  event_bus.py  payment_service.py  settlement_service.py  sync_service.py  wallet_service.py
docs/adr/: 001-offline-token-model.md  002-crypto-choices.md
migrations/: env.py
tests/: __init__.py  conftest.py  gf_trace.py  smoke_crypto.py  test_coin_selection.py  test_crypto.py  test_payments.py  test_settlements.py  test_sync.py  test_wallets.py
